--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,45 +1,74 @@
+/* General Styles */
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  
+}
+
 .footer {
-  background-color: #2c3e50; 
-   color: #ecf0f1; 
-  padding: 20px;
+  background: linear-gradient(90deg, #8198db, #e59fc7);
+  padding: 20px 10px;
   text-align: center;
-  font-family: 'Arial', sans-serif;
+  margin-top: 40px;
+  /* box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.1); */
+  border-top-left-radius: 20px; /* Rounded corners */
+  border-top-right-radius: 20px; /* Rounded corners */
 }
 
 .footer-content {
-  max-width: 1200px;
-  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
 }
 
 .social-links {
-  margin-bottom: 20px;
+  display: flex;
+  gap: 30px;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
-.social-links a {
-  margin: 0 15px;
-}
-
-.social-icon {
-  font-size: 30px;
-  color: #ecf0f1;
+.social-link {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 1rem;
   transition: transform 0.3s ease, color 0.3s ease;
 }
 
-.social-links a:hover .social-icon {
-  transform: scale(1.1); 
-    color: #3498db; 
+.social-link:hover {
+  color: #eda800;
+  /* transform: scale(1.1); */
 }
 
-footer p {
-  font-size: 14px;
-  margin-top: 10px;
+.social-icon3 {
+  background: none;
+  color: #ffffff;
+  font-size: 1.9rem;
+  margin-right: 8px;
 }
 
+.social-text {
+  display: inline;
+  font-size: 1.8rem;
+  font-weight: bold;
+}
+
+/* Responsive Design */
 @media (max-width: 768px) {
-  .footer-content {
-    padding: 10px;
+  .social-text {
+    display: none; /* Hide text for medium and small devices */
   }
 
   .social-icon {
-    font-size: 28px;  }
+    margin-right: 0;
+  }
+
+  .social-links {
+    gap: 15px; /* Reduce spacing between icons */
+  }
 }
