--- a/src/components/Magazine/Magazine.css
+++ b/src/components/Magazine/Magazine.css
@@ -1,13 +1,105 @@
-.magazine {
-    text-align: center;
-    margin-top: 50px;
+/* Magazine Section */
+.magazinesection {
+  text-align: center;
+  padding: 50px 20px;
+  background: linear-gradient(90deg, #8198db, #e59fc7); /* Gradient background */
+  /* color: white; */
+}
+
+.magazine-title {
+  font-size: 2.9rem;
+  font-weight: bold;
+  margin-bottom: 20px;
+  margin-top: 45px;
+}
+
+.magazine-description {
+  font-size: 1.4rem;
+  color: #333;
+  margin-bottom: 40px;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  line-height: 1.6;
+}
+
+/* Magazine Grid */
+.magazine-grid {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  grid-template-columns: repeat(3, 1fr); /* 3 boxes per row for large devices */
+  justify-content: center;
+}
+
+
+@media (max-width: 768px) {
+  .magazine-title {
+    font-size: 2.6rem;
+    font-weight: bold;
+    margin-top: 60px;
   }
-  
-  .magazine h1 {
-    font-size: 2.5rem;
-  }
-  
-  .magazine p {
+
+  .magazine-description {
     font-size: 1.2rem;
   }
-  
+}
+
+@media (max-width: 480px) {
+  .magazine-title {
+    font-size: 2.2rem;
+    font-weight: bold;
+    margin-top: 60px;
+  }
+
+  .magazine-description {
+    font-size: 1.1rem;
+  }
+}
+
+/* Magazine Box */
+.magazine-box {
+  background: white;
+  border-radius: 10px;
+  box-shadow: 20px 20px 15px rgba(0, 0, 0, 0.15);
+  overflow: hidden;
+  position: relative;
+  cursor: pointer;
+  padding-top: 10px;
+  padding-bottom: 7px;
+  padding-left: 9px;
+  padding-right: 10px;
+  transition: 0.2s ease-in-out;
+}
+
+.magazine-box:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+}
+
+.magazine-image {
+  width: 180px;
+  height: 240px;
+  object-fit: cover;
+  border-radius: 10px;
+  /* display: block; */
+}
+
+.hover-year {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: white;
+  opacity: 0;
+  transition: opacity 0.9s;
+}
+
+.magazine-box:hover .hover-year {
+  opacity: 20;
+  background: rgba(0, 0, 0, 0.6); /* Slight background for visibility */
+  padding: 98px 44px;
+  border-radius: 10px;
+}
